Reading file using memory mapping, SWAR for newline/semicolon finding